--- a/ShikShaq/Views/Branches/Create.cshtml
+++ b/ShikShaq/Views/Branches/Create.cshtml
@@ -20,17 +20,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input id="branchName" asp-for="Name" class="form-control" />
+                <input id="branchName" asp-for="Name" class="form-control" required/>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DateOpened" class="control-label"></label>
-                <input asp-for="DateOpened" class="form-control" />
+                <input asp-for="DateOpened" class="form-control" required/>
                 <span asp-validation-for="DateOpened" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
+                <input asp-for="Address" class="form-control" required/>
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
 
