--- a/ShikShaq/Views/Orders/Create.cshtml
+++ b/ShikShaq/Views/Orders/Create.cshtml
@@ -14,18 +14,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="OrderDate" class="control-label"></label>
-                <input asp-for="OrderDate" class="form-control" />
+                <input asp-for="OrderDate" class="form-control" required/>
                 <span asp-validation-for="OrderDate" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="User" class="control-label"></label>
-                <select name="UserId" class="form-control" asp-items="@ViewBag.Users"></select>
+                <select name="UserId" class="form-control" asp-items="@ViewBag.Users" required></select>
             </div>
 
             <div class="form-group">
                 <label asp-for="Branch" class="control-label"></label>
-                <select name="BranchId" class="form-control" asp-items="@ViewBag.Branches"></select>
+                <select name="BranchId" class="form-control" asp-items="@ViewBag.Branches" required></select>
             </div>
 
 
