--- a/ShikShaq/Views/ProductTags/Create.cshtml
+++ b/ShikShaq/Views/ProductTags/Create.cshtml
@@ -14,12 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Product" class="control-label"></label>
-                <select name="ProductId" class="form-control" asp-items="@ViewBag.Products"></select>
+                <select name="ProductId" class="form-control" asp-items="@ViewBag.Products" required></select>
             </div>
 
             <div class="form-group">
                 <label asp-for="Tag" class="control-label"></label>
-                <select name="TagId" class="form-control" asp-items="@ViewBag.Tags"></select>
+                <select name="TagId" class="form-control" asp-items="@ViewBag.Tags" required></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
